# KODERS

./: .gitignore  README.md  pyproject.toml
data/: sample.csv
demo/: quickstart.ipynb
src/: benchmarking.py  io.py  optim.py  rank.py  sort_search.py  stats.py
src/metrics/: metrics.py
src/ml_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: linear_regression.py
src/pipeline/: pipeline.py
src/preprocessing/: scaler.py
tests/: test_pipeline.py  test_preprocessing.py
tests/e2e/: test_metrics_stats_workflows.py  test_ranking_search_workflows.py  test_regression_workflows.py
